--- a/Assets/HYPLAY/Core/Editor/HyplayEditor.uxml
+++ b/Assets/HYPLAY/Core/Editor/HyplayEditor.uxml
@@ -50,5 +50,6 @@
             <uie:PropertyField name="AppRedirectURIs" />
             <ui:Button text="Update This App" name="UpdateApp" class="hyplay-button" />
         </ui:VisualElement>
+        <ui:Label text="v1.0.6" enable-rich-text="false" style="-unity-text-align: lower-right; opacity: 0.5; flex-grow: 1; padding-left: 5px; padding-bottom: 5px; padding-right: 5px; padding-top: 5px;" />
     </ui:VisualElement>
 </ui:UXML>
